--- a/StudentManagement/StudentManagement.csproj
+++ b/StudentManagement/StudentManagement.csproj
@@ -76,6 +76,7 @@
     </Content>
     <Content Include="bootstrap\css\bootstrap.min.css" />
     <Content Include="bootstrap\js\bootstrap.bundle.min.js" />
+    <Content Include="checkout.aspx" />
     <Content Include="classdetails.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -2349,6 +2350,13 @@
     <Compile Include="admin_login.aspx.designer.cs">
       <DependentUpon>admin_login.aspx</DependentUpon>
     </Compile>
+    <Compile Include="checkout.aspx.cs">
+      <DependentUpon>checkout.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="checkout.aspx.designer.cs">
+      <DependentUpon>checkout.aspx</DependentUpon>
+    </Compile>
     <Compile Include="classdetails.aspx.cs">
       <DependentUpon>classdetails.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -2486,6 +2494,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="teacherimg\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
