--- a/StudentManagement/Web.config
+++ b/StudentManagement/Web.config
@@ -5,6 +5,12 @@
   -->
 <configuration>
 
+	
+		<appSettings>
+			<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+		</appSettings>
+	
+
 	<connectionStrings>
   <add name="con" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\lmsDB.mdf;Integrated Security=True"
    providerName="System.Data.SqlClient" />
